# gapsim

./: Gapsim.hs  Grafica.hs  Main.hs  README  Sesion.hs  datos  gapsim.cabal  gapsim.hs  rubik.gap
